3-ingress/graylog-ingress.yaml
apiVersion: extensions/v1beta1
kind: Ingress
metadata:
  name: graylog3-ingress-tls
  namespace: logging
  annotations:
    fluentbit.io/parser: "k8s-nginx-ingress"
    kubernetes.io/ingress.class: "nginx"
    cert-manager.io/issuer: letsencrypt-prod
spec:
  tls:
  - secretName: graylog3-ingress-tls
    hosts:
    - graylog.kubelancer.net
  rules:
  - host: graylog.kubelancer.net
    http:
      paths:
      - path: /
        backend:
          serviceName: graylog3
          servicePort: 9000
