3-ingress/prometheus-operator-ingress.yaml
apiVersion: extensions/v1beta1
kind: Ingress
metadata:
  name: prometheus-operator-ingress-tls
  namespace: ingress-nginx
  annotations:
    enable-vts-status: "true"
    prometheus.io/scrape: "true"
    prometheus.io/port: "10254"
    ingress.kubernetes.io/rewrite-target: "/"
    fluentbit.io/parser: "k8s-nginx-ingress"
    kubernetes.io/ingress.class: "nginx"
    cert-manager.io/issuer: letsencrypt-prod
spec:
  tls:
  - secretName: prometheus-operator-ingress-tls
    hosts:
    - prometheus-operator.kubelancer.net
  rules:
  - host: prometheus-operator.kubelancer.net
    http:
      paths:
      - path: /
        backend:
          serviceName: prometheus-operator-prometheus
          servicePort: 9090
