3-ingress/web1-ingress.yaml
apiVersion: extensions/v1beta1
kind: Ingress
metadata:
  name: web1-ingress-tls
  namespace: default
  annotations:
    fluentbit.io/parser: "k8s-nginx-ingress"
    kubernetes.io/ingress.class: "nginx"
    cert-manager.io/issuer: letsencrypt-prod
spec:
  tls:
  - secretName: web1-ingress-tls
    hosts:
    - web1.kubelancer.net
  rules:
  - host: web1.kubelancer.net
    http:
      paths:
      - path: /
        backend:
          serviceName: nginx
          servicePort: 80
